--- a/yes.html
+++ b/yes.html
@@ -56,7 +56,7 @@
             <h1 class="header_text">CHUUUUUUUUUU MY LOVEEEEEE!!!!</h1>
         </div>
         <div class="gif_container">
-            <img src="tkthao219-bubududu.gif" alt="Cute animated illustration">
+            <a href="waaah.html"><img src="tkthao219-bubududu.gif" alt="Cute animated illustration"></a>
         </div>
     </div>
 
