--- a/yes.html
+++ b/yes.html
@@ -12,6 +12,7 @@
     </head>
 
 <body>
+
     <div class="snowflakes" aria-hidden="true">
         <div class="snowflake">
             <div class="inner">♥</div>
@@ -56,10 +57,18 @@
             <h1 class="header_text">CHUUUUUUUUUU MY LOVEEEEEE!!!!</h1>
         </div>
         <div class="gif_container">
-            <a href="waaah.html"><img src="tkthao219-bubududu.gif" alt="Cute animated illustration"></a>
+            <a href="letter.html"><img src="tkthao219-bubududu.gif" alt="Cute animated illustration"></a>
         </div>
     </div>
+    <audio id="song">
+        <source src="honey-jam-royalty-free-lofi-music.mp3">
+    </audio>
+    <script>
+        window.addEventListener('click', () => {
+            document.getElementById("song").play();
+        });
 
+    </script>
 </body>
 
 </html>
