--- a/photos.html
+++ b/photos.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <a href="waaah.html">
+        <h1>I LOVE YOU NADIYAAAAAA</h1>
+    </a>
     <div class="wrapper">
         <div class="container">
             <input type="radio" name="slide" id="c1" checked>
